data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1881.wast
;; 2. **Test Case 2**:    - **Description**: Establish a `loop` control with an input type of `f32` and use `br_if` with a condition of type `i32` to jump to the beginning of the loop. This tests whether the `br_if` correctly identifies the loop's input type and handles the conditional branch accordingly.    - **Constraint**: Validates that control flow correctly identifies target block types, flagging errors where input stack types are incorrectly managed.

(assert_invalid
  (module (func $loop-br_if-input-type
    (loop (param f32)
      (br_if 0 (i32.const 1))
    )
  ))
  "type mismatch"
)